# ros_project_manager

./: LICENSE.txt  README.md
ros_package_manager/: CMakeLists.txt  package.xml  setup.py
ros_package_manager/script/: package_parser.py
ros_package_manager/scripts/: package_parser.py
ros_package_manager/src/ros_package_manager/: package_xml_parser.py
ros_project_manager/: CMakeLists.txt  package.xml
